# BlinkPredict

./: .gitignore  README.md  README_EN.md
Banckend/: .env.example  AlchemyWebhookExample.txt  README.md  go.mod  go.sum  main.go  sqlc.yaml
Banckend/db/: rediskey.md  schema.sql  schema_v2.sql  schemav2.sql
Banckend/docs/: docs.go  swagger.json  swagger.yaml
Banckend/scripts/: dev.sh  load_limit_orders.go
Contract/: Anchor.toml  README.md
Contract/programs/predix-program/: Cargo.toml
Contract/programs/predix-program/src/: error.rs  lib.rs
Contract/programs/predix-program/src/state/: config.rs  market.rs  mod.rs  order.rs  position.rs  settlement.rs  user.rs
Contract/programs/predix-program/src/utils/: close_account.rs
Contract/tests/: predix-program.ts
Frontened/: .env.example  README.md  package-lock.json  package.json
Frontened/app/: layout.tsx  page.tsx
Frontened/components/: RequireAuth.tsx  app-header.tsx  auth-provider.tsx  provider.tsx  theme-toggle.tsx  user-menu.tsx
Frontened/hooks/: useCurrentSolanaWallet.ts  useTrading.ts  (+5 more)
spec/: 0-contractdesign.md  00-target-architecture-and-data-model.md  01-hot-path-and-realtime-event.md  02-wallet-shard-design.md  03-database-schema-redesign.md  04-redis-read-model-redesign.md  05-matcher-module-redesign.md  06-writer-redesign.md  07-pusher-redesign.md  08-indexer-design.md  09-executor-and-contract-design.md  10-frontend-state-model.md  11-startup-and-deployment.md  3-matcher-shared-wallet-batching-redesign.md  4-writer-pusher-redis-websocket-redesign.md  5-settlement-contract-implementation.md
(+170 files in other folders)
