[package]
name = "predix-program"
version = "0.1.0"
description = "BlinkPredict v1a contract skeleton"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "predix_program"

[features]
default = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
pyth-sdk-solana = "0.10.6"
solana-program = "2.3.0"

bytemuck = { version = "1.16", features = ["derive", "min_const_generics"] }
